# footballManagementSystem

./: .black  README.md  functions.py  pyproject.toml  settings.json
db_models/: models.py
users/: custom_manager.py  models.py
