[tool.poetry]
name = "footballmanagementsystem"
version = "0.1.0"
description = ""
authors = ["Stefan Baumann"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-filter = "^22.1"
django-extensions = "^3.2.1"
bs4 = "^0.0.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
